# StimulationParse-task

./: README.md
FileReader/: CSVFileReader.h  MATFileReader.h  MDFFileReader.h  MF4FileReader.h  STIReader.cpp  STIReader.h
FileReader/CSVFileReader/: CMakeLists.txt  CSVFileReader.cpp  CSVFileReader.h  CSVFileReaderTest.cpp
FileReader/MATFileReader/: CMakeLists.txt  MATFileReader.cpp  MATFileReader.h  MATFileReaderTest.cpp  MATFileReaderTest1.cpp
FileReader/MF4FileReader/: CMakeLists.txt  MF4FileReader.cpp  MF4FileReader.h  MF4FileReaderTest.cpp
FileReader/STIReader/: CMakeLists.txt  STIReader.cpp  STIReader.h  STIReaderTest.cpp
ParseXml/: CMakeLists.txt  ParseXml.cpp  ParseXml.h  ParseXmlTest.cpp
SignalDescription/: AssistOperation.cpp  AssistOperation.h  OperationSignalDescription.cpp  OperationSignalDescription.h  SOSignalDescription.h  Segment.cpp  Segment.h  SegmentSignalDescription.cpp  SegmentSignalDescription.h  SignalDescription.cpp  SignalDescription.h  SignalDescriptionSet.cpp  SignalDescriptionSet.h
SignalGenerator/: CMakeLists.txt  SignalGenerator.cpp  SignalGenerator.h  SignalGeneratorTest.cpp
Value/: SignalGroupValue.h  SignalValue.cpp  SignalValue.h
files/: 1.sti  111.csv  20240313_134433_0.mdf  20240313_134900.mf4  20240313_135350.mat  TriangularWaveOutput.csv
matio-1.5.26/: Makefile  Makefile.in  README  config.status  configure  configure.ac  libtool  matio.pc
matio-1.5.26/documentation/: Makefile
matio-1.5.26/getopt/: Makefile
matio-1.5.26/src/: Makefile  Makefile.in  endian.lo  inflate.lo  libmatio.la  mat.lo  matioConfig.h  matvar_cell.lo  matvar_struct.lo  read_data.lo
matio-1.5.26/src/.libs/: libmatio.lai  libmatio.so.11.1.1  libmatio.ver
matio-1.5.26/test/: Makefile  Makefile.in  atconfig  package.m4  test_mat  test_snprintf
matio-1.5.26/test/.libs/: test_mat
matio-1.5.26/tools/: Makefile  Makefile.in  matdump
matio-1.5.26/tools/.libs/: matdump
mdf4lib_linux/Common/: mdfConfig.h
mdf4lib_linux/MDF4_SimpleReader/: ImportMdf4.cpp  ImportMdf4.h
mdf4lib_linux/MDF4_SimpleWriter/: MDF4_SimpleWriter.cpp  MDF4_SimpleWriter.vcxproj
